# portal.hackduke.org

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  conftest.py  eslint.config.mjs  package-lock.json  package.json  pyproject.toml  pytest.ini
.claude/: settings.local.json
.devcontainer/: Dockerfile  README  README.MD  devcontainer.json
.github/: pull_request_template.md
.github/workflows/: deploy-backend.yml  deploy-db.yml  docker-image.yml  run-pytest.yml
alembic/: .env.example  env.py
alembic/versions/: 0e9e9b967197_remove_question_text.py  15de1b230d27_add_created_at_columns.py  8ae814e0479f_generate_uuid_on_default.py  8e8979c6661b_initial.py  98c0c151e830_create_application_table.py  a0d78e3610ff_support_file_questions_and_auth0.py  (+2 more)
docs/: auth.md  devcontainer.md  docusaurus.config.ts  local-setup.md  networking.md  package-lock.json  package.json  postgres.md  react_overview_lesson.md  sqlalchemy.md
docs/docs/: intro.md
models/: __init__.py  application.py  base.py  form.py  question.py  response.py  user.py
portal-backend/: .env.example  Caddyfile  Dockerfile  compose.yml  package-lock.json  package.json  server.js
portal-backend-python/: Caddyfile  Dockerfile  README.MD  accepted.txt  add_admin.py  auth.py  bulk_confirm.py  compose.yml  config.py  conftest.py  db.py  load_env.sh  populate_env_prod.sh  pyproject.toml  server.py  test_auth.py  test_server.py
portal-frontend/: env  load_env.sh  package-lock.json  package.json
postgres/: NETWORKING.md  docker-compose.yml
qrcode/: claude.py  db.py  requirements.txt
(+160 files in other folders)
